--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <main id="container">
+        <img src="./images/image-qr-code.png" alt="">
+
+        <div id="content">
+            <h1>Improve you front-end skills by building projects</h1>
+
+            <p>
+                Scan th QR code to visit Frontend Mentor and take your coding skills to the next level
+            </p>
+        </div>
+    </main>
 </body>
 </html>
